--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/pmachata/madvac#readme",
   "devDependencies": {
+    "chai": "^4.1.2",
     "webpack": "^4.10.2",
     "webpack-cli": "^3.0.1"
   },
